# dep-audit

./: .gitignore  .pre-commit-hooks.yaml  LICENSE  README.md  SHOWCASE.md  pyproject.toml  repos.toml  showcase.toml
.github/: db-coverage-pr.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  db_entry.md  feature_request.md
.github/workflows/: ci.yml  db-coverage.yml  publish.yml
scripts/: write_stubs.py
src/dep_audit/: __init__.py  anchors.py  cache.py  classify.py  cli.py  config.py  db.py  depsdev.py  ecosystems.py  generate.py  github.py  lockfiles.py  report.py  scan_list.py  scanner.py  types.py  usage.py
src/dep_audit/db/cargo/: ansi-term.toml  atty.toml  cfg-if.toml  docopt.toml  error-chain.toml  failure.toml  futures-preview.toml  hermit-abi.toml  is-terminal-polyfill.toml  lazy-static.toml  lazy_static.toml  matches.toml  memoffset.toml  num-cpus.toml  num_cpus.toml  once-cell.toml  once_cell.toml  rustc-serialize.toml  spin.toml  tempdir.toml  term.toml  try-from.toml  try_from.toml  void.toml  winapi.toml
src/dep_audit/db/go/: github.com-dgrijalva-jwt-go.toml  github.com-form3tech-oss-jwt-go.toml  github.com-ghodss-yaml.toml  github.com-gogo-protobuf.toml  github.com-golang-dep.toml  github.com-golang-glog.toml  github.com-golang-protobuf.toml  github.com-hashicorp-go-multierror.toml  github.com-imdario-mergo.toml  github.com-mitchellh-go-homedir.toml  github.com-mitchellh-mapstructure.toml  github.com-opentracing-opentracing-go.toml  github.com-pkg-errors.toml  github.com-satori-go.uuid.toml  github.com-sirupsen-logrus.toml  github.com-uber-jaeger-client-go.toml  go.uber.org-atomic.toml  go.uber.org-multierr.toml  golang.org-x-xerrors.toml  gopkg.in-yaml.v2.toml
src/dep_audit/db/npm/: abort-controller.toml  array-flatten.toml  array-includes.toml  array.prototype.fill.toml  array.prototype.find.toml  array.prototype.findindex.toml  array.prototype.flat.toml  array.prototype.flatmap.toml  bluebird.toml  clone.toml  co.toml  (+59 more)
src/dep_audit/lockfiles_pkg/: __init__.py  _types.py  _util.py  cargo.py  go.py  npm.py  python.py
src/dep_audit/stdlib_map/: cargo.toml  npm.toml  python.toml
tests/: test_anchors.py  test_cache.py  test_classify.py  test_cli.py  test_config.py  test_db.py  test_ecosystems.py  test_generate.py  test_github.py  test_lockfiles.py  test_lockfiles_cargo.py  test_lockfiles_go.py  test_lockfiles_npm.py  test_report.py  test_usage.py  test_usage_go.py  test_usage_js.py  test_usage_rust.py
(+46 files in other folders)
