[project]
name = "dep-audit"
version = "0.3.1"
description = "Identify unnecessary dependencies in software projects"
readme = "README.md"
license = "MIT"
authors = [
    { name = "zfoq", email = "37124856+zfoq@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
rich = ["rich>=13.0"]

[project.scripts]
dep-audit = "dep_audit.cli:main"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.9", "mypy>=1.0"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
