[project]
name = "dep-audit"
version = "0.5.0"
description = "Identify unnecessary dependencies in software projects"
readme = "README.md"
license = "MIT"
authors = [
    { name = "zfoq", email = "37124856+zfoq@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = []
keywords = [
    "dependencies", "audit", "analysis", "unused", "deprecated",
    "python", "npm", "cargo", "rust", "node",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/zfoq/dep-audit"
Repository = "https://github.com/zfoq/dep-audit"
Issues = "https://github.com/zfoq/dep-audit/issues"
Changelog = "https://github.com/zfoq/dep-audit/commits/main"

[project.optional-dependencies]
rich = ["rich>=13.0"]

[project.scripts]
dep-audit = "dep_audit.cli:main"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.9", "mypy>=1.0"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
